--- a/package.json
+++ b/package.json
@@ -6,12 +6,32 @@
   "repository": "https://github.com/team-yaza/mozi-client",
   "author": "hyunjin <leehj0110@kakao.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
