--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "next": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
