--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "hyunjin <leehj0110@kakao.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
