--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
-  "presets": [
-    "@babel/preset-react",
+  "presets": ["next/babel"],
+  "plugins": [
     [
-      "@babel/preset-env",
+      "styled-components",
       {
-        "modules": false,
-        "useBuiltIns": "usage",
-        "corejs": 3
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
       }
-    ],
-    "@babel/preset-typescript"
+    ]
   ]
 }
