Revert "chore: Next 세팅 (#8)"
This reverts commit 99092fe49a55be12ae7f67098b87ed05f449af5e.

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
-  "presets": ["next/babel"],
-  "plugins": [
+  "presets": [
+    "@babel/preset-react",
     [
-      "styled-components",
+      "@babel/preset-env",
       {
-        "ssr": true,
-        "displayName": true,
-        "preprocess": false
+        "modules": false,
+        "useBuiltIns": "usage",
+        "corejs": 3
       }
-    ]
+    ],
+    "@babel/preset-typescript"
   ]
 }
