--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "prettier": "^2.7.1"
   }
 }
