--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.+{json|css|md}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
