fix: test가 pages 폴더 안에 있을 경우 빌드가 안되는 오류 수정

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx,json,css,scss,md}": [
+    "*.{ts,tsx,js,jsx}": [
       "eslint --fix",
       "prettier --write"
     ]
