--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: test
+name: test & lint
 
 on:
   pull_request:
@@ -20,3 +20,6 @@ jobs:
 
       - name: Test
         run: yarn test
+
+      - name: Lint
+        run: yarn lint
