--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "jest --ci"
     ]
   }
 }
