test: TodoSubmitForm 테스트 코드 작성 (#47)
* fix: require문 사용 가능 (config파일에)

* fix: jest config

* chore: jest 의존성 추가

* chore: test setup file

* fix: tsconfig test파일 exclude

* refactor: key prop 추가

* test: TodoSubmitForm 컴포넌트 렌더링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,19 +20,10 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"]
+    },
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "next.config.js",
-    "cypress/e2e/app.test.js"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
+  "exclude": ["node_modules", "**/*.test.tsx", "**/*.test.ts", "**/*.spec.tsx", "**/*.spec.ts"]
 }
