--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["node", "jest", "@types/testing-library__jest-dom"],
     "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,9 +18,8 @@
     "incremental": true,
     "paths": {
       "@/*": ["./*"]
-    },
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
-  "exclude": ["node_modules", "**/*.test.tsx", "**/*.test.ts", "**/*.spec.tsx", "**/*.spec.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "cypress/**/*", "./cypress.config.ts"]
 }
