--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "prepare": "husky install",
     "cypress": "cypress open",
     "test": "jest",
-    "watch": "jest --watchAll"
+    "watch": "jest --watchAll",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@next/eslint-plugin-next": "^12.2.2",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -30,9 +41,11 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "babel-loader": "^8.2.5",
     "cypress": "^10.3.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-storybook": "^0.6.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-dom": "^4.0.0",
