chore: 폴더 이름 수정 및 테스트 파일 분리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "tests"],
   "exclude": ["node_modules", "cypress/**/*", "./cypress.config.ts"]
 }
