--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@next/eslint-plugin-next": "^12.2.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
@@ -28,12 +29,12 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@next/eslint-plugin-next": "^12.2.2",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.5",
     "@types/jest": "^28.1.6",
+    "@types/navermaps": "^3.0.16",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
