--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["node", "jest", "@types/testing-library__jest-dom"],
+    "types": ["node", "jest", "@types/testing-library__jest-dom", "@types/navermaps"],
     "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
