--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,11 @@ dist
 .env.local
 .env.dev
 .env.prod
+
+# service worker
+
+**/public/workbox-*.js
+**/public/workbox-*.js.map
+**/public/sw.js
+**/public/sw.js.map
+**/public/worker-*.js
