--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "next": "^12.2.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
