--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.6",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
