--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "localforage": "^1.10.0",
     "next": "^12.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
