chore(git): ignore build files

--- a/.gitignore
+++ b/.gitignore
@@ -114,4 +114,7 @@ dist
 **/public/sw.js
 **/public/sw.js.map
 **/public/worker-*.js
-fallback-development.js
+
+# next build files
+build/
+fallback-*.js
