--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.1.0",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
     "localforage": "^1.10.0",
     "next": "^12.2.0",
@@ -65,7 +67,6 @@
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.1",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2"
