--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
     "localforage": "^1.10.0",
+    "mongoose": "^6.5.2",
     "next": "^12.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
