--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "localforage": "^1.10.0",
     "mongoose": "^6.5.2",
     "next": "^12.2.0",
+    "next-auth": "^4.10.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
