--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
+    "framer-motion": "^7.2.0",
     "localforage": "^1.10.0",
     "mongoose": "^6.5.2",
     "next": "^12.2.0",
