--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,19 @@
 {
-  "name": "Next PWA demo",
-  "short_name": "Next PWA",
+  "name": "MOZI",
+  "short_name": "MOZI",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
-
     {
-      "src": "/icon-512x512.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -18,5 +22,6 @@
   "background_color": "#FFFFFF",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "lang": "ko-KR"
 }
