--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "prisma": "^4.3.1",
     "ts-jest": "^28.0.6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
