--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
+    "bson": "^4.7.0",
     "framer-motion": "^7.2.0",
     "localforage": "^1.10.0",
-    "mongoose": "^6.5.2",
     "next": "^12.2.0",
     "next-auth": "^4.10.3",
     "next-compose-plugins": "^2.2.1",
