--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
