--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "framer-motion": "^7.2.0",
     "localforage": "^1.10.0",
     "next": "^12.2.5",
-    "next-auth": "^4.10.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
