--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.5",
@@ -72,7 +73,8 @@
     "react-dom": "^18.2.0",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
-    "styled-reset": "^4.4.2"
+    "styled-reset": "^4.4.2",
+    "uuid": "^9.0.0"
   },
   "huksy": {
     "hooks": {
