--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,43 +2,59 @@ name: CD
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
 
 jobs:
   CD:
     runs-on: ubuntu-latest
     steps:
+      ## node setting
+      - uses: actions/checkout@v3
 
-    ## node setting
-    - uses: actions/checkout@v3
+      ## docker login
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    ## docker login
-    - name: Docker Login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-    ## docker build & push
-    - name: Docker build & push
-      run: |
+      ## docker build & push
+      - name: Docker build & push
+        env:
+          NEXT_PUBLIC_NAVER_CLIENT_ID: ${{ secrets.NEXT_PUBLIC_NAVER_CLIENT_ID }}
+          NEXT_PUBLIC_KAKAO_JAVASCRIPT_KEY: ${{ secrets.NEXT_PUBLIC_KAKAO_JAVASCRIPT_KEY }}
+          NEXT_PUBLIC_KAKAO_REDIRECT_URI: ${{secrets.NEXT_PUBLIC_KAKAO_REDIRECT_URI}}
+          NEXT_PUBLIC_KAKAO_REST_API_KEY: ${{secrets.NEXT_PUBLIC_KAKAO_REST_API_KEY}}
+          NEXT_PUBLIC_KAKAO_CLIENT_SECRET: ${{secrets.NEXT_PUBLIC_KAKAO_CLIENT_SECRET}}
+          AUTH_SECRET: ${{secrets.AUTH_SECRET}}
+          KAKAO_SECRET: ${{secrets.KAKAO_SECRET}}
+          JWT_SECRET: ${{secrets.JWT_SECRET}}
+        run: |
+          echo "NEXT_PUBLIC_NAVER_CLIENT_ID=$NEXT_PUBLIC_NAVER_CLIENT_ID" > .env.local
+          echo "NEXT_PUBLIC_KAKAO_JAVASCRIPT_KEY=$NEXT_PUBLIC_KAKAO_JAVASCRIPT_KEY" >> .env.local
+          echo "NEXT_PUBLIC_KAKAO_REDIRECT_URI=$NEXT_PUBLIC_KAKAO_REDIRECT_URI" >> .env.local
+          echo "NEXT_PUBLIC_KAKAO_REST_API_KEY=$NEXT_PUBLIC_KAKAO_REST_API_KEY" >> .env.local
+          echo "NEXT_PUBLIC_KAKAO_CLIENT_SECRET=$NEXT_PUBLIC_KAKAO_CLIENT_SECRET" >> .env.local
+          echo "KAKAO_SECRET=$KAKAO_SECRET" >> .env.local
+          echo "AUTH_SECRET=$AUTH_SECRET" >> .env.local
+          echo "JWT_SECRET=$JWT_SECRET" >> .env.local
           docker build -f Dockerfile -t hancihu/mozi-client .
           docker push hancihu/mozi-client
 
-    ## deploy to production
-    - name: Deploy MOZI Production to AWS
-      uses: appleboy/ssh-action@master
-      id: deploy-mozi
-      with:
+      ## deploy to production
+      - name: Deploy MOZI Production to AWS
+        uses: appleboy/ssh-action@master
+        id: deploy-mozi
+        with:
           host: ${{ secrets.AWS_HOST }}
           username: ubuntu
           key: ${{ secrets.AWS_CERT }}
           envs: GITHUB_SHA
           script: |
-              cd /home/ubuntu/mozi-client
-              sudo docker-compose down
-              sudo docker pull hancihu/mozi-client
-              docker-compose up -d
-              docker image prune -f
+            cd /home/ubuntu/mozi-client
+            sudo docker-compose down
+            sudo docker pull hancihu/mozi-client
+            docker-compose up -d
+            docker image prune -f
