--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-portal": "^4.2.2",
     "recoil": "^0.7.4",
     "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.5",
