--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@tanstack/react-query-devtools": "^4.6.0",
     "axios": "^0.27.2",
     "bson": "^4.7.0",
+    "dayjs": "^1.11.5",
     "framer-motion": "^7.2.0",
     "localforage": "^1.10.0",
     "next": "^12.2.5",
