--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/navermaps": "^3.0.16",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.21",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -72,6 +73,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.4",
     "recoil-persist": "^4.2.0",
