--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.15.0",
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.6.0",
     "axios": "^0.27.2",
