--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_NAVER_CLIENT_ID=c467awv8uh
+NEXT_PUBLIC_SENTRY_DSN=https://f43b398262cc4065a5a74d1652731d5d@o4503968160481280.ingest.sentry.io/4503968161660928
