--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   },
   "description": "mozi client ",
   "main": "index.js",
-  "repository": "https://github.com/team-yaza/mozi-client",
-  "author": "hyunjin <leehj0110@kakao.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/team-yaza/mozi-client.git"
+  },
+  "author": {
+    "name": "hyunjin",
+    "email": "leehj0110@kakao.com"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -19,7 +25,8 @@
     "test": "jest",
     "watch": "jest --watchAll",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -48,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.10.2",
     "cypress": "^10.3.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
@@ -93,5 +101,11 @@
       "prettier --write",
       "jest --ci --passWithNoTests"
     ]
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/team-yaza/mozi-client/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "homepage": "https://github.com/team-yaza/mozi-client#readme",
+  "_id": "mozi-client@0.0.1"
 }
