--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "storybook-addon-next-router": "^4.0.1",
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^28.0.6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.7.4"
