--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@next/eslint-plugin-next": "^12.2.2",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/react": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -59,14 +59,14 @@
     "cypress": "^10.3.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-storybook": "^0.6.6",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "storybook-addon-next-router": "^4.0.1",
+    "storybook-addon-next": "^1.6.4",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^28.0.6",
@@ -81,7 +81,7 @@
     "dayjs": "^1.11.5",
     "framer-motion": "^7.2.0",
     "localforage": "^1.10.0",
-    "next": "^12.2.5",
+    "next": "^12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "react": "^18.2.0",
