fix: stroybook에서 이미지 안뜨는 문제 해결

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "cypress": "cypress open",
     "test": "jest",
     "watch": "jest --watchAll",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook s public",
     "chromatic": "npx chromatic"
   },
   "devDependencies": {
