--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "recoil": "^0.7.4",
     "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.5",
