chore: add description in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "MOZI",
   "short_name": "MOZI",
+  "description": "할 일을 잊지 않기 위한 시간/장소 기반 TODO 서비스",
   "display": "standalone",
   "theme_color": "#735AFF",
   "background_color": "#735AFF",
