--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,6 @@
     "noEmit": true,
     "types": ["cypress"]
   },
+  "include": ["../../node_modules/cypress", "cypress/*/*.ts"],
   "exclude": ["node_modules"]
 }
