--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chromatic": "^6.10.2",
     "cypress": "^10.3.0",
     "eslint": "^8.18.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-storybook": "^0.6.6",
     "husky": "^8.0.1",
@@ -71,7 +72,7 @@
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^28.0.6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@sentry/nextjs": "^7.15.0",
