--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "tests"],
-  "exclude": ["node_modules", "cypress/**/*", "./cypress.config.ts"]
+  "exclude": ["node_modules", "src/*.test.ts"]
 }
