--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,8 @@
     {
       "src": "/logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/logo512.png",
